[project]
name = "sicb-itinerary"
version = "0.1.0"
description = "Parse SICB itinerary PDFs into SQLite and render timetables."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
schedule-tool = "schedule_tool:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
