[project]
name = "sicb-itinerary"
version = "0.1.0"
description = "Parse SICB itinerary PDFs into SQLite and render timetables."
requires-python = ">=3.10"
dependencies = [
    "fpdf>=1.7.2",
]

[project.optional-dependencies]
pdf = ["fpdf2"]

[project.scripts]
schedule-tool = "schedule_tool:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["schedule_tool", "render_matrix_pdf", "gui_server", "layout_config"]
